--- a/html_css.org
+++ b/html_css.org
@@ -376,3 +376,91 @@ action="script.url">
 
 其中script.url是在提交表单时运行的脚本在服务器上的位置。
 例如：action="showform.php"
+*** 2、处理表单
+1、关于PHP。
+  推荐Larry Ullman写的《PHP基础教程》和《PHP 6与MySQL 5基础教程》。
+  校图书馆有。
+2、安全性。
+  仅仅在你的表单上建立安全措施是不够的，别人可能会创建他们自己的表单，从而调用你
+  的脚本，用它发送武术的垃圾消息。
+  要显示的
+
+*** 3、通过电子邮件发送表单数据
+1、输入<form method="post"
+2、输入action="emailform.php"，这里的emailform.php是将表单数据发送到你的电子邮件
+地址的脚本。
+3、输入>。
+4、创建表单内容。
+5、输入</form>结束表单。
+*** 4、对表单元素进行组织
+1、在form标记下面，但是在希望包含在第一组中的任何表单元素上面，输入<fieldset>。
+2、如果愿意，输入<legend 。
+3、如果愿意，输入align="direction",这里的direction是left或者right。
+4、输入 >
+5、输入文本。
+6、输入</legend>结束图例。
+7、穿件应该属于第一组的表单元素。
+8、输入</fieldset>结束第一组表单元素。
+9、对每个表单元素组重复步骤1——8。
+例如：
+<form method="post" action="showform.php">
+
+<fieldset id="personal"><legend>Personal Information
+</legend>
+</fieldset>
+
+<fieldset id="choices"><legend>Choices
+</legend>
+</fieldset>
+
+<fieldsetid="sugestions"><legend>Suggestions
+</legend>
+
+</fieldset>
+
+在每个fieldset元素中添加了id属性，一帮助对每组表单元素应用样式。
+
+fieldset {margin-bottom:lem;
+width:24em;padding-top:1.5em;}
+
+ #personal {background:#F3b4f5;
+boder:outset #f3b4f5;}
+
+Tips： IE对于legend元素的支持很差。
+*** 5、创建文本框
+步骤：
+<form method="post" action="showform.php">
+
+<fieldset id="personal"><legend>Personal Information
+</legend>
+</fieldset>
+
+Name:<input type="text" name="name" size="30" /><br />
+
+Address:<input type="text" name="address" size="30" /><br />
+
+Town/City:<input type="text" name="city" size="30" /><br />
+
+State:<input type="text" name="state" size="2" maxlength="2" /><br />
+
+Zipcode:<input type="text" name="zip" size="5" maxlength="5" /><br />
+
+*** 6、创建密码框
+密码框与文本框的唯一差异是，在密码框中输入的文本显示为符号或者星号，从而隐藏相关
+信息。但发送到服务器是密码是未加密的。
+
+Zipcode:<input type="text" name="zip" size="5" maxlength="5" /><br />
+
+Custom ID:<input type="password" name="code" size="8" />
+Tips:
+1、即使在密码框中没有输入任何内容，name属性仍然会被发送到服务器（带一个未定义的
+   value）。
+2、密码框提供的唯一保护措施就是在屏幕上隐藏密码，防止别人在访问者输入密码是从背
+  后偷看。要想真正的保护密码，必须在安全的服务器上使用它们。
+*** 7、对表单元素进行正式标注
+1、输入<label
+2、如果愿意，输入for="idname">，这里的idname是对应的表单元素中的id属性值。
+3、输入标签的内容。
+4、输入</label>。
+Tips:
+如果
